Fix Chameleon's breaking changes and add scrollbar styles for Firefox (#269)
* Bump chameleon-controls-library

* Fix Chameleon breaking changes

* Add scrollbar styles for Firefox

* Add missing commit

--- a/packages/mercury/src/base/_common.scss
+++ b/packages/mercury/src/base/_common.scss
@@ -3,7 +3,6 @@
 /*----------------------
 Focus
 ----------------------*/
-
 @mixin focus-outline($outline: false) {
   outline: var(--focus__outline-width) var(--focus__outline-style)
     var(--focus__outline-color);
@@ -16,8 +15,11 @@ Focus
 /*----------------------
 Scrollbar
 ----------------------*/
-
 @mixin scrollbar-styles() {
+  scrollbar-width: thin;
+  scrollbar-color: var(--scrollbar-thumb__bg-color)
+    var(--scrollbar-track__bg-color);
+
   //scrollbar
   &::-webkit-scrollbar {
     width: var(--scrollbar__size);
